--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ body {
   max-width: 1200px;
   height: 100vh;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: #f1f5f9;
 }
 
